# models-x

./: .gitignore  README-ML.md  README-dev.md  README.md  pyproject.toml
src/models_x/: __init__.py
src/models_x/fn/: dropout.py  gelu.py  gelu_new.py  softmax.py
src/models_x/gpt2/: gpt2.py  gpt2_config.py  gpt2_decoder.py  gpt2_decoder_block.py  gpt2_decoder_block_attn.py  gpt2_decoder_block_mlp.py  gpt2_decoder_block_sdpa.py  gpt2_lm.py  gpt2_lm_head.py  gpt2_stem.py  gpt2_stem_wpe.py  gpt2_stem_wte.py
src/models_x/mems/: mems.py  mems_config.py  mems_decoder.py  mems_decoder_block.py  mems_decoder_block_attn.py  mems_decoder_block_mlp.py  mems_decoder_block_sdpa.py  mems_stem.py
src/models_x/nn/: dropout.py  embedding.py  gelu.py  gelu_new.py  layer_norm.py  linear.py  relu.py  softmax.py
tests/fn/: test_dropout.py  test_gelu.py  test_gelu_new.py  test_relu.py  test_softmax.py
tests/gpt2/: test_gpt2.py  test_gpt2_config.py  test_gpt2_decoder.py  test_gpt2_decoder_block.py  test_gpt2_decoder_block_attn.py  test_gpt2_decoder_block_mlp.py  test_gpt2_decoder_block_sdpa.py  test_gpt2_lm.py  test_gpt2_lm_head.py  test_gpt2_stem.py  test_gpt2_stem_wpe.py  test_gpt2_stem_wte.py
tests/mems/: test_mems.py  test_mems_config.py  test_mems_decoder.py  test_mems_decoder_block.py  test_mems_decoder_block_attn.py  test_mems_decoder_block_mlp.py  test_mems_decoder_block_sdpa.py  test_mems_stem.py
tests/nn/: test_dropout.py  test_embedding.py  test_gelu.py  test_gelu_new.py  test_layer_norm.py  test_linear.py  test_relu.py  test_softmax.py
train/gpt2/: train_gpt2.py
(+2 files in other folders)
