[project]
name = "models-x"
version = "0.1.0"
description = "Repo for external models in Jax"
readme = "README.md"
authors = [
    { name = "Erik Edwards", email = "erik.edwards4@gmail.com" }
]
requires-python = ">=3.14"
dependencies = []

[build-system]
requires = ["uv_build>=0.11.6,<0.12.0"]
build-backend = "uv_build"
