[project]
name = "models-x"
version = "0.1.0"
description = "Repo for external models in Jax"
readme = "README.md"
authors = [
    { name = "Erik Edwards", email = "erik.edwards4@gmail.com" }
]
requires-python = ">=3.14"
dependencies = [
    "jax[cuda13,cuda13-pip]>=0.10.0",
    "jaxtyping>=0.3.9",
    "loguru>=0.7.3",
    "pydantic>=2.13.2",
    "pydantic-settings>=2.13.1",
    "transformers>=5.5.4",
    "typeguard>=4.5.1",
]

[build-system]
requires = ["uv_build>=0.11.6,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "data-science-types>=0.2.23",
    "flake8>=7.3.0",
    "mypy>=1.20.1",
    "pycodestyle>=2.14.0",
    "pyflakes>=3.4.0",
    "pylint>=4.0.5",
    "pytest>=9.0.3",
    "python-dotenv>=1.2.2",
    "ruff>=0.15.11",
    "types-pyyaml>=6.0.12.20260408",
]
